MLE-26538 Bumped to 3.0.0 and updating example projects
Lots of little changes, like changing the example projects to use Gradle 8.14.3.

Not bumping the real version yet to 3.0, as Jenkins gets upset because it can't publish a non snapshot. Will do that on release branch, which is coming soon.